    - Fix 'priveleged' (renamed to 'privileged') method on RT::Client::REST::User
    - Add missing disabled, nickname, lang, contactinfo and signature methods to
      RT::Client::REST::User
    - Clean up the API for retrieving links. Patch from T.Pascal is missing some
      cases like links that are URLs. This feature is not documented as it's
      considered experimental.

0.41
  Tomas Doran <bobtfish@bobtfish.net>
 - Make version number a string to avoid length of version number changing
   at 0.X0 releases (as this breaks distro packages)
 - Update META.yml to the 0.4 META spec.
 - Include repository metadata to make it easier for people to contribute
   to the module.
 - Change from ExtUtils::MakeMaker to Module::Install (I'm sure you can
   generate the correct information with EU::MM, I just don't know how
   offhand).
 - Add Test::More as a test_requires to help distros which split it out
   of their core perl package (RT#45150)

0.40 
  Jerrad Pierce <jpierce@cpan.org>
  - #38710, more user attributes
  - #39868 & #42391, Alter CF parsing to accomodate 3.8 as well as 3.6
	This required tweaks to Forms as well as Object.
  - #38591 & #43844, Add requestor attribute to Ticket so that autoreplies
	are sent to users under RT3.8

0.37	Fri Aug 15 2008 "Dmitri Tikhonov" <dtikhonov@yahoo.com>
  - Fri Aug 15 2008 "Dmitri Tikhonov" <dtikhonov@yahoo.com>
    Improvement: reorganized exceptions, made
    RT::Client::REST::Object::Exception a subclass of
    RT::Client::REST::Exception.  What this means is that now any native
    exception thrown by RT::Client::REST code can be caught by catching a
    generic RT::Client::REST::Exception class.  Added tests to ticket and
    attachment tests scripts to verify the behavior.  I have been meaning
    to do this for a while now.

    Fixed an error in RT::Client::REST::Ticket POD.  Bug 36814.

0.36    Sat May 10 2008 "Damien Krotkine" <dams@cpan.org>
  - Sat May 10 2008 "Damien Krotkine" <dams@cpan.org>